<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dino Pedia</string>
    <string name="info_keluarga_icon">Ikon keluarga</string>
    <string name="info_keluarga_name">Nama keluarga</string>
    <string name="info_keluarga_desc">Deskripsi</string>
    <string name="info_keluarga_periode">Periode Hidup</string>
    <string name="info_keluarga_characteristic">Karakteristik Fisik</string>
    <string name="info_keluarga_habitat">Habitat</string>
    <string name="info_keluarga_perilaku">Perilaku</string>
    <string name="info_keluarga_klasifikasi">Klasifikasi</string>
    <string-array name="keluargas_name">
        <item>Sauropodomorpha</item>
        <item>Theropoda</item>
        <item>Ornithopoda</item>
        <item>Ceratopsia</item>
        <item>Thyreophora</item>
        <item>Ankylosauria</item>
        <item>Pterosauria</item>
        <item>Saurischia</item>
    </string-array>
    <string-array name="keluargas_icon">
        <item>@drawable/sauropodomorpha</item>
        <item>@drawable/theropoda</item>
        <item>@drawable/ornithopoda</item>
        <item>@drawable/ceratopsia</item>
        <item>@drawable/thyreophora</item>
        <item>@drawable/ankylosauria</item>
        <item>@drawable/pterosauria</item>
        <item>@drawable/saurischia</item>
    </string-array>
    <string-array name="keluargas_description">
        <item>Sauropodomorpha adalah kelompok dinosaurus yang terkenal dengan ukuran tubuhnya yang besar dan leher panjang. Mereka termasuk beberapa dinosaurus herbivora terbesar yang pernah hidup.</item>
        <item>Theropoda adalah kelompok dinosaurus yang umumnya dikenal sebagai pemakan daging. Mereka memiliki ciri khas sebagai pemburu yang efisien.</item>
        <item>Ornithopoda adalah kelompok dinosaurus herbivora yang dikenal dengan gigi-gigi yang mirip burung.</item>
        <item>Ceratopsia adalah kelompok dinosaurus herbivora yang memiliki ciri khas tanduk dan piring di tengkorak mereka.</item>
        <item>Thyreophora adalah kelompok dinosaurus herbivora yang dilindungi oleh duri atau lempengan tulang yang terletak di tubuh mereka.</item>
        <item>Ankylosauria adalah kelompok dinosaurus herbivora yang memiliki tubuh yang dilindungi oleh duri dan lempengan tulang.</item>
        <item>Pterosauria adalah kelompok reptil terbang purba yang memiliki sayap membran.</item>
        <item>Saurischia adalah kelompok dinosaurus yang memiliki ciri khas struktur panggul mirip reptil modern.</item>
    </string-array>
    <string-array name="keluargas_periode">
        <item>Periode Triassic hingga Jurassic.</item>
        <item>Mulai dari Periode Triassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Sebagian besar dari Periode Jurassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Mulai dari akhir Periode Jurassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Mulai dari Periode Jurassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Mulai dari Periode Jurassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Mulai dari Periode Triassic hingga Kepunahan Cretaceous-Paleogene.</item>
        <item>Mulai dari Periode Triassic hingga Kepunahan Cretaceous-Paleogene.</item>
    </string-array>
    <string-array name="keluargas_characteristic">
        <item>Tubuh besar, leher panjang, dan kepala kecil.</item>
        <item>Rangka yang ringan dan aerodinamis, kaki yang panjang, dan gigi tajam.</item>
        <item>Rangka yang ringan, kaki yang panjang, dan gigi berbentuk tanduk.</item>
        <item>Tanduk di kepala dan piring di tengkorak, tubuh besar dengan kaki yang kuat.</item>
        <item>Tubuh dilindungi oleh duri atau lempengan tulang, kaki yang kuat.</item>
        <item>Tubuh yang sangat dilindungi dengan duri dan lempengan tulang, ekor berduri besar.</item>
        <item>Sayap membran, kaki yang panjang, dan paruh yang mirip dengan burung.</item>
        <item>Rangka yang besar, struktur panggul khas, dan kaki yang kuat.</item>
    </string-array>
    <string-array name="keluargas_habitat">
        <item>Biasanya ditemukan di daerah berhutan dan lahan basah.</item>
        <item>Berbagai habitat termasuk daratan, hutan, dan rawa-rawa.</item>
        <item>Umumnya hidup di daerah terbuka seperti padang rumput dan dataran banjir.</item>
        <item>Umumnya hidup di daerah yang kaya vegetasi seperti hutan-hutan.</item>
        <item>Umumnya ditemukan di dataran tinggi atau padang rumput yang luas.</item>
        <item>Umumnya ditemukan di dataran yang luas atau hutan terbuka.</item>
        <item>Umumnya ditemukan di daerah pesisir dan pantai.</item>
        <item>Beragam, dari hutan hingga daerah terbuka.</item>
    </string-array>
    <string-array name="keluargas_perilaku">
        <item>Mereka mungkin bergerombol atau berkelompok untuk mencari makanan.</item>
        <item>Biasanya adalah predator yang aktif, berburu dalam kelompok kecil atau sendiri.</item>
        <item>Mungkin hidup dalam kawanan besar untuk melindungi diri dari pemangsa.</item>
        <item>Mungkin hidup dalam kelompok kecil atau berpasangan.</item>
        <item>Mungkin hidup secara berkelompok atau secara soliter.</item>
        <item>Mungkin hidup secara soliter dan cenderung bersikap defensif.</item>
        <item>Aktif terbang untuk mencari makanan seperti ikan atau invertebrata kecil.</item>
        <item>Beragam, tergantung pada subkelompoknya, termasuk pemangsa aktif dan herbivora pasif.</item>
    </string-array>
    <string-array name="keluargas_klasifikasi">
        <item>Subordo Sauropodomorpha dari ordo Saurischia.</item>
        <item>Subordo Theropoda dari ordo Saurischia.</item>
        <item>Infraordo Ornithopoda dari ordo Ornithischia.</item>
        <item>Infraordo Ceratopsia dari ordo Ornithischia.</item>
        <item>Infraordo Thyreophora dari ordo Ornithischia.</item>
        <item>Ordo Ankylosauria dari infrakelas Ornithischia.</item>
        <item>Kelas Pterosauria dari filum Chordata.</item>
        <item>Ordo Saurischia dari superordo Dinosauria.</item>
    </string-array>
    <string name="info_dino_icon">Ikon Dino</string>
    <string name="info_dino_name">Nama Dino</string>
    <string name="info_dino_desc">Deskripsi</string>
    <string name="info_dino_characteristic">Karakteristik</string>
    <string name="info_dino_kelompok">Kelompok</string>
    <string name="info_dino_habitat">Habitat</string>
    <string name="info_dino_makanan">Makanan</string>
    <string name="info_dino_panjang">Panjang</string>
    <string name="info_dino_tinggi">Tinggi</string>
    <string name="info_dino_bobot">Bobot</string>
    <string name="info_dino_kelemahan">Kelemahan</string>
    <string-array name="start_dino_array">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_dino_array">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="dinos_name">
        <item>Apatosaurus</item>
        <item>Brachiosaurus</item>
        <item>Tyrannosaurus Rex</item>
        <item>Velociraptor</item>
        <item>Parasaurolophus</item>
        <item>Edmontosaurus</item>
        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Stegosaurus</item>
        <item>Kentrosaurus</item>
        <item>Nodosaurus</item>
        <item>Euoplocephalus</item>
        <item>Quetzalcoatlus</item>
        <item>Dimorphodon</item>
        <item>Allosaurus</item>
        <item>Diplodocus</item>
    </string-array>
    <string-array name="dinos_icon">
        <item>@drawable/apatosaurus</item>
        <item>@drawable/brachiosaurus</item>
        <item>@drawable/tyrannosaurusrex</item>
        <item>@drawable/velociraptor</item>
        <item>@drawable/parasaurolophus</item>
        <item>@drawable/edmontosaurus</item>
        <item>@drawable/triceratops</item>
        <item>@drawable/styracosaurus</item>
        <item>@drawable/stegosaurus</item>
        <item>@drawable/kentrosaurus</item>
        <item>@drawable/nodosaurus</item>
        <item>@drawable/euoplocephalus</item>
        <item>@drawable/quetzalcoatlus</item>
        <item>@drawable/dimorphodon</item>
        <item>@drawable/allosaurus</item>
        <item>@drawable/diplodocus</item>
    </string-array>
</resources>